kyverno/policies/stackrox-policy-as-code-enabled.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: stackrox-policy-as-code-enabled
spec:
  validationFailureAction: Audit
  rules:
    - name: stackrox-policy-as-code-enabled
      skipBackgroundRequests: false
      match:
        any:
          - resources:
              kinds:
                - Central
              namespaces:
                - stackrox
      validate:
        message: "policy-as-code is not enabled"
        pattern:
          spec:
            configAsCode:
              configAsCodeComponent: Enabled
